# Aether-Agents

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  PROMPT_OPUS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  test_db.py  test_db_perf.py
.eter/.ariadna/: CURRENT.md
.eter/.hermes/: DESIGN.md  PLAN.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-site.yml  test.yml
.graphify/: providers.json
.hermes/plans/: 2026-04-23_alignment-soul-skills-config.md  2026-04-29-external-audit-fixes.md
.jules/: bolt.md
docs/: hermes-profile-setup.md  honcho-setup.md  workflow-engine-experiment.md
docs/guides/: CONFIGURATION.md  INSTALLATION.md  QUICKSTART.md  USER_PROFILE.md
docs/plans/: bidirectional-comm-PLAN.md
docs/releases/v0.18.0-daimon-reliability/: BENCHMARK_REPORT.md  DESIGN.md  EVIDENCE.md
docs/sesiones/: INDICE.md
docs/sesiones/2026-04-20/: Cronos-B-resumen.md
docs/setup/: GITIGNORE-ANALYSIS.md  INSTALACION-WSL.md
docs/test-drives/: 2026-06-02-aethertest-round2.md
evaluations/daimon-reliability-v0.18.0/: README.md  cases.json  run_benchmark.py  score_results.py  validate_cases.py
home/: .env.example  .update_check  README.md  SOUL.md  channel_directory.json  config.yaml  config.yaml.bak.20260613_155514  config.yaml.bak.20260620_011107  config.yaml.example  config.yaml.template  gateway.pid  gateway_state.json  olympus-flow-ux-design.md  provider_models_cache.json
home/profiles/ariadna/: .env.example  SOUL.md  config.yaml  config.yaml.template  state.db-shm  state.db-wal
home/profiles/athena/: .env.example  SOUL.md  config.yaml  config.yaml.template
home/profiles/daedalus/: .env.example  SOUL.md  config.yaml  config.yaml.template
home/profiles/etalides/: .env.example  SOUL.md  config.yaml  config.yaml.template  state.db-shm  state.db-wal
home/profiles/hefesto/: .env.example  .update_check  SOUL.md  config.yaml  config.yaml.template
home/profiles/hermes/: .env.example  .update_check  SOUL.md  channel_directory.json  config.yaml  config.yaml.template  gateway.pid  gateway_state.json  ollama_cloud_models_cache.json  skins  state.db-shm  (+2 more)
home/skins/: hermes-cyberpunk.yaml
research/: INDEX.md  README.md
research/.obsidian/: app.json  workspace.json
scripts/: configure.sh  migrate_aether_db.py  setup-env.sh  setup-honcho.sh  setup.sh  start-gateway.sh  start.sh  update.sh
shared/: env.base.example
src/: requirements.txt  test_poll_transparency.py
src/olympus/: README.md  __init__.py  acp_client.py  config.py  discovery.py  log.py  registry.py  server.py
src/olympus_v2/: __init__.py  config_loader.py  consult_action.py  consulting_db.py  event_translator.py  pi_adapter.py  requirements.txt  server.py  soul_to_system.py
src/olympus_v3/: DESIGN.md  PLAN.md  __init__.py  acp_manager.py  aether_db.py  config_loader.py  consult_action.py  consulting_db.py  db.py  server.py
tests/: conftest.py  test_aether.py  test_aether_curate.py  test_aether_setup_cli.py  test_config.py  test_discovery.py  test_registry.py  test_server_schema.py  test_workflows.py
tests/olympus/: test_consult_action.py  test_consulting_db.py
website/: config.html  daimons.html  index.html  setup.html
website/css/: arch-additions.css  style.css
website/js/: main.js
(+284 files in other folders)
