[project]
name = "olympus-mcp"
version = "0.18.2"
description = "Olympus MCP Server — Aether Agents orchestrator. Manages Daimon lifecycle and inter-agent communication via ACP."
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Christopher (DarkArty07)" },
]
readme = "README.md"
keywords = ["multi-agent", "mcp", "ai", "orchestration", "daimons", "aether"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
    "agent-client-protocol>=0.1.0",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "pyyaml>=6.0",
    "graphifyy>=0.8.0",
]
[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
aether-setup = "olympus_v3.cli.setup:main"
olympus = "olympus.server:main"
olympus-v3 = "olympus_v3.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
olympus = ["py.typed"]

[project.urls]
Homepage = "https://github.com/DarkArty07/Aether-Agents"
Documentation = "https://github.com/DarkArty07/Aether-Agents#readme"
Repository = "https://github.com/DarkArty07/Aether-Agents"
Changelog = "https://github.com/DarkArty07/Aether-Agents/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
